# OpenAdvanceWars

./: .gitignore  .gitmodules  CMakeLists.txt  Game.h  Main.cpp  PlayerInfo.cpp  PlayerInfo.h  Readme.md  Sprite.h  Tile.h
Content/Levels/: Default.xml
Content/Textures/: Arrow.xml  Buildings.xml  Menu.xml  MenuSprites.xml  Misc.xml  Sheets.xml  Tileset.xml  Unit_Infantry_Blue.xml  Unit_Infantry_Red.xml  Unit_Mech_Blue.xml  Unit_Mech_Red.xml  Unit_Recon_Red.xml  Unit_Tank_Red.xml
Sprites/: Building.cpp  Vehicle.cpp
Sprites/Buildings/: Airport.cpp  Base.cpp  Base.h  City.h  Silo.cpp  Silo.h
Sprites/Units/: Mech.cpp  Mech.h  Recon.h  Tank.h
src/: Game.cpp  Game.h  Main.cpp  Menu.cpp  Menu.h  Sprite.cpp  StdH.h  Tile.cpp  World.cpp  World.h
src/Sprites/: Building.cpp  Building.h  Property.cpp  Property.h  Unit.cpp  Unit.h  Vehicle.cpp  Vehicle.h  WorldSelection.cpp  WorldSelection.h
src/Sprites/Buildings/: Airport.cpp  Airport.h  Base.cpp  City.cpp  HQ.cpp  HQ.h  Port.cpp  Port.h  Silo.cpp
src/Sprites/Units/: Infantry.cpp  Infantry.h  Mech.cpp  Recon.cpp  Tank.cpp
